--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,12 @@
             <version>6.27.1</version>
         </dependency>
 
+        <!-- Wicket jQuery UI -->
+        <dependency>
+            <groupId>com.googlecode.wicket-jquery-ui</groupId>
+            <artifactId>wicket-jquery-ui</artifactId>
+            <version>8.0.0-M9</version>
+        </dependency>
 
     </dependencies>
     <build>
