--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,14 @@
             <version>6.28.0</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.vaynberg.wicket.select2/wicket-select2 -->
+        <dependency>
+            <groupId>com.vaynberg.wicket.select2</groupId>
+            <artifactId>wicket-select2</artifactId>
+            <version>2.3</version>
+        </dependency>
+
+
     </dependencies>
     <build>
         <resources>
