--- a/pom.xml
+++ b/pom.xml
@@ -90,34 +90,6 @@
             <scope>provided</scope>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.imgscalr/imgscalr-lib -->
-        <dependency>
-            <groupId>org.imgscalr</groupId>
-            <artifactId>imgscalr-lib</artifactId>
-            <version>4.2</version>
-        </dependency>
-
-        <!-- panel de notificaciones de gabriel en guia -->
-        <dependency>
-            <groupId>gabriel-lib</groupId>
-            <artifactId>plataforma</artifactId>
-            <version>1</version>
-        </dependency>
-
-        <!-- https://mvnrepository.com/artifact/javax.inject/javax.inject -->
-        <dependency>
-            <groupId>javax.inject</groupId>
-            <artifactId>javax.inject</artifactId>
-            <version>1</version>
-        </dependency>
-
-        <!-- ModalWindow wicket -->
-        <dependency>
-            <groupId>wicket-lib</groupId>
-            <artifactId>wicket-extensions</artifactId>
-            <version>6.27.1</version>
-        </dependency>
-
         <!-- Wicket jQuery UI -->
         <dependency>
             <groupId>com.googlecode.wicket-jquery-ui</groupId>
@@ -125,32 +97,68 @@
             <version>6.28.0</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/com.vaynberg.wicket.select2/wicket-select2 -->
-        <dependency>
-            <groupId>com.vaynberg.wicket.select2</groupId>
-            <artifactId>wicket-select2</artifactId>
-            <version>2.3</version>
-        </dependency>
+        <!--&lt;!&ndash; https://mvnrepository.com/artifact/org.imgscalr/imgscalr-lib &ndash;&gt;-->
+        <!--<dependency>-->
+            <!--<groupId>org.imgscalr</groupId>-->
+            <!--<artifactId>imgscalr-lib</artifactId>-->
+            <!--<version>4.2</version>-->
+        <!--</dependency>-->
 
-        <dependency>
-            <groupId>javax.enterprise</groupId>
-            <artifactId>cdi-api</artifactId>
-            <version>1.0-SP4</version>
-        </dependency>
+        <!--&lt;!&ndash; panel de notificaciones de gabriel en guia &ndash;&gt;-->
+        <!--<dependency>-->
+            <!--<groupId>gabriel-lib</groupId>-->
+            <!--<artifactId>plataforma</artifactId>-->
+            <!--<version>1</version>-->
+        <!--</dependency>-->
 
-        <dependency>
-            <groupId>org.jboss.weld.servlet</groupId>
-            <artifactId>weld-servlet</artifactId>
-            <version>2.4.7.Final</version>
-        </dependency>
+        <!--&lt;!&ndash; https://mvnrepository.com/artifact/javax.inject/javax.inject &ndash;&gt;-->
+        <!--<dependency>-->
+            <!--<groupId>javax.inject</groupId>-->
+            <!--<artifactId>javax.inject</artifactId>-->
+            <!--<version>1</version>-->
+        <!--</dependency>-->
 
-        <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>3.0.1</version>
-            <scope>provided</scope>
-        </dependency>
+        <!--&lt;!&ndash; ModalWindow wicket &ndash;&gt;-->
+        <!--<dependency>-->
+            <!--<groupId>wicket-lib</groupId>-->
+            <!--<artifactId>wicket-extensions</artifactId>-->
+            <!--<version>6.27.1</version>-->
+        <!--</dependency>-->
+
+        <!--&lt;!&ndash; https://mvnrepository.com/artifact/com.vaynberg.wicket.select2/wicket-select2 &ndash;&gt;-->
+        <!--<dependency>-->
+            <!--<groupId>com.vaynberg.wicket.select2</groupId>-->
+            <!--<artifactId>wicket-select2</artifactId>-->
+            <!--<version>2.3</version>-->
+        <!--</dependency>-->
+
+        <!--<dependency>-->
+            <!--<groupId>javax.enterprise</groupId>-->
+            <!--<artifactId>cdi-api</artifactId>-->
+            <!--<version>2.0</version>-->
+            <!--<scope>provided</scope>-->
+        <!--</dependency>-->
+
+        <!--<dependency>-->
+            <!--<groupId>org.jboss.weld.servlet</groupId>-->
+            <!--<artifactId>weld-servlet</artifactId>-->
+            <!--<version>2.4.7.Final</version>-->
+        <!--</dependency>-->
+
+        <!--&lt;!&ndash; https://mvnrepository.com/artifact/org.jboss.weld.se/weld-se-core &ndash;&gt;-->
+        <!--<dependency>-->
+            <!--<groupId>org.jboss.weld.se</groupId>-->
+            <!--<artifactId>weld-se-core</artifactId>-->
+            <!--<version>2.2.9.Final</version>-->
+        <!--</dependency>-->
+
+        <!--&lt;!&ndash; https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api &ndash;&gt;-->
+        <!--<dependency>-->
+            <!--<groupId>javax.servlet</groupId>-->
+            <!--<artifactId>javax.servlet-api</artifactId>-->
+            <!--<version>3.0.1</version>-->
+            <!--<scope>provided</scope>-->
+        <!--</dependency>-->
 
 
     </dependencies>
